# elearning-platform

./: docker-compose.yml
apps/web/: .env  (+11 more)
backend/elearning_project/: .gitignore  Dockerfile  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg
backend/elearning_project/accounts/: admin.py  managers.py  models.py  serializers.py  signals.py  tests.py  urls.py  validators.py  views.py
backend/elearning_project/accounts/migrations/: 0001_initial.py  0002_alter_user_user_type.py  0003_userprofile_bio.py  0004_userprofile_title.py
backend/elearning_project/authentication/: admin.py  serializers.py  tests.py  urls.py  views.py
backend/elearning_project/chat/: admin.py  models.py  querysets.py  serializers.py  tests.py  urls.py  views.py
backend/elearning_project/chat/migrations/: 0001_initial.py
backend/elearning_project/core/: enums.py  exceptions.py  models.py  pagination.py  serializers.py  tests.py  utils.py
backend/elearning_project/courses/: admin.py  filters.py  models.py  permissions.py  querysets.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/elearning_project/courses/migrations/: 0001_initial.py  0002_course_category_course_duration.py  0003_course_status.py  0004_coursematerial_duration.py
backend/elearning_project/elearning_project/: asgi.py  urls.py  wsgi.py
backend/elearning_project/elearning_project/settings/: base.py  local.py
backend/elearning_project/notifications/: admin.py  models.py  serializers.py
backend/elearning_project/websocket/: middleware.py  urls.py  utils.py  views.py
(+115 files in other folders)
